# ComfyUI-JIP

./: .gitignore  LICENSE  NOTICE  README.md  __init__.py  pyproject.toml  requirements.txt
jip/: __init__.py  interactive.py  paths.py  payload.py  server.py
jip/nodes/: __init__.py  cnet.py  load.py  resize.py  rmbg.py  save.py
web/: .gitkeep  jip-browse.js  jip-overlay.js  jip-resize.js  jip-rmbg.js  jip.js
